Sat May 25 21:29:34 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/pty/pty.c (get_device_once): FreeBSD 10-current and 9-stable
	  added O_CLOEXEC support to posix_openpt, so assume FreeBSD 9.2 or
	  later supports it.
	  http://www.freebsd.org/cgi/query-pr.cgi?pr=162374

Sat May 25 18:46:23 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (rb_method_entry_min_max_arity): fix missing break in switch.
	  This was introduced in r38236, which is not intentional apparently.
	  This has caused no actual harm because VM_METHOD_TYPE_OPTIMIZED is
	  not used except for OPTIMIZED_METHOD_TYPE_SEND, but may do in
	  future.  Coverity Scan found this inadequacy.

Sat May 25 18:08:06 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* dir.c (bracket): fix copy-paste error.  When the first and last
	  characters of fnmatch range have different length, fnmatch may
	  have wrongly matched a path that does not really match.
	  Coverity Scan found this bug.

Sat May 25 17:06:25 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (after_gc_sweep): reduce full GC timing.

Sat May 25 11:28:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (set_const_visibility): return without clearing method
	  cache if no arguments.

	* vm_method.c (set_method_visibility): ditto.

Sat May 25 11:27:32 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (set_method_visibility): quote unprintable method name.

Sat May 25 11:24:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_frame_callee): returns the called name of the current
	  frame, not the previous frame.

	* eval.c (prev_frame_callee, prev_frame_func): rename and make static,
	  as these are used by rb_f_method_name() and rb_f_callee_name() only.

	* variable.c (set_const_visibility): use the called name.

Sat May 25 08:58:23 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_quote_unprintable): check if argument is a string.

Fri May 24 19:32:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>
